5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1723_2502.log
== TEST (2019-05-12 10:41:17) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
z = 0
total = 0
while(z <= k):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(total, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(z <= k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:41:32) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
z = 0
total = 0
while(z <= n):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(total, 8))
	

-- OUTPUT:
3.14159245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:42:29) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
z = 1
total = 0
while(z <= n):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(total, 8))
	

-- OUTPUT:
-1.04719777
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:42:37) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
z = 1
total = 0
while(z <= n):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(total, 8))
	

-- OUTPUT:
-1.04719777
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:42:48) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 0
z = 0
total = 0
while(z <= n):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(total, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 10:42:54) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 0
z = 0
total = 0
while(z <= n):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(total, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:00:02) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
z = 0
total = 0
while(z <= n):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(total, 8))
	

-- OUTPUT:
3.14159245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:06:53) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
z = 0
total = 0
while(z <= n):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(a, 8))
	

-- OUTPUT:
3.14159245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:07:06) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
z = 0
total = 0
while(z <= n):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(a, 8))
	

-- OUTPUT:
3.14159245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:07:16) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
z = 0
total = 0
while(z <= n):
	a = total + sqrt(12) * (1/(y * 3**z)) * ((-1) ** z)
	y = y + 2
	z = z + 1
	total = a
print(round(a, 8))
	

-- OUTPUT:
3.14159245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:17:22) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
i = 1
total = 0
while(i <= n):
	a = total + sqrt(12) * (1/(y * 3**i)) * ((-1) ** (i+1))
	y = y + 2
	i = i + 1
	total = a
print(round(total, 8))
	

-- OUTPUT:
1.04719777
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:19:49) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
i = 0
total = 0
while(i <= n):
	a = total + (1/(y * 3**i)) * ((-1) ** i)
	y = y + 2
	i = i + 1
	total = a
print(round(total * (sqrt(12), 8))
	

-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:20:00) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
i = 0
total = 0
while(i <= n):
	a = total + (1/(y * 3**i)) * ((-1) ** i)
	y = y + 2
	i = i + 1
	total = a
print(round(total * (sqrt(12), 8))
	

-- ERROR:
File "XXXX", line 13
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:20:16) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
i = 0
total = 0
while(i <= n):
	a = total + (1/(y * 3**i)) * ((-1) ** i)
	y = y + 2
	i = i + 1
	total = a
print(round(total * (sqrt(12)), 8))
	

-- OUTPUT:
3.14159245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:20:56) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
i = 0
total = 0
while(i <= n):
	a = total + (1/(y * 3**i)) * ((-1) ** i)
	y = y + 2
	i = i + 1
	total = a
print(round(total * (sqrt(12)), 8))
	

-- OUTPUT:
3.14159245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 11:21:05) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
y = 1
i = 0
total = 0
while(i <= n):
	a = total + (1/(y * 3**i)) * ((-1) ** i)
	y = y + 2
	i = i + 1
	total = a
print(round(total * (sqrt(12)), 8))
	

-- OUTPUT:
3.14159245
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:24:50) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
i = 0
total = 0
while(n > 0):
	total = total + sqrt(12) * (1/(2* i + i * (3**i))) * ((-1) ** i)
	n = n - 1
	i = i + 1
print(round(total, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = total + sqrt(12) * (1/(2* i + i * (3**i))) * ((-1) ** i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 21:24:55) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
i = 0
total = 0
while(n > 0):
	total = total + sqrt(12) * (1/(2* i + i * (3**i))) * ((-1) ** i)
	n = n - 1
	i = i + 1
print(round(total, 8))
	

-- EXECUTION TIME:
0.160719
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 6, in <module>
    total = total + sqrt(12) * (1/(2* i + i * (3**i))) * ((-1) ** i)
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 21:25:26) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
i = 0
total = 0
while(n > 0):
	total = total + sqrt(12) * (1/((2*i + i) * (3**i))) * ((-1) ** i)
	n = n - 1
	i = i + 1
print(round(total, 8))
	

-- EXECUTION TIME:
0.20339
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 6, in <module>
    total = total + sqrt(12) * (1/((2*i + i) * (3**i))) * ((-1) ** i)
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:25:38) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
i = 0
total = 0
while(n > 0):
	total = total + sqrt(12) * (1/((2*i + i) * (3**i)))) * ((-1) ** i)
	n = n - 1
	i = i + 1
print(round(total, 8))
	

-- ERROR:
File "XXXX", line 6
    total = total + sqrt(12) * (1/((2*i + i) * (3**i)))) * ((-1) ** i)
                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-12 21:31:13) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
i = 0
total = 0
while(n > 0):
	total = total + sqrt(12) * (1/((2*i + i) * (3**i))) * ((-1) ** i)
	n = n - 1
	i = i + 1
print(round(total, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    total = total + sqrt(12) * (1/((2*i + i) * (3**i))) * ((-1) ** i)
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-12 21:31:31) 
-- CODE:
from math import*
n = int(input("Digite um numero natural: "))
i = 0
total = 0
while(n > 0):
	total = total + sqrt(12) * (1/((2*i + 1) * (3**i))) * ((-1) ** i)
	n = n - 1
	i = i + 1
print(round(total, 8))
	

-- EXECUTION TIME:
0.288317
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
